--- a/PDF_generator/CSS/main.css
+++ b/PDF_generator/CSS/main.css
@@ -17,46 +17,49 @@
   Base
 */
 
-thead   {display: block;}
-
 @page {
   size: A4;
     width: 210mm;
     height: 297mm;
     margin: 10mm;
+    /*padding-top:10mm*/
 }
 
-@media print {
-    thead { display: table-header-group; }
-
-    .container{
-    page-break-inside: avoid;
-    }
-  html, body {
-    width: 210mm;
-    height: 297mm;
-  }
+/*@page {*/
+/*    @top-left{ content: element(header)}*/
+/*}*/
+/*@page {*/
+/*    @bottom-left { content: "FCT-UNL Libphys" }*/
+/*}*/
 
 
-  /* ... the rest of the rules ... */
-}
+/*@media print {*/
+
+/*  html, body {*/
+/*    width: 210mm;*/
+/*    height: 297mm;*/
+/*  }*/
+
+
+/*  !* ... the rest of the rules ... *!*/
+/*}*/
 
 body {
   font-family: "PT Serif", Georgia, "Times New Roman", serif;
   font-size: 18px;
   color: #515151;
-  line-height: 1.75rem;
+  /*line-height: 1.75rem;*/
 }
 
-@media (max-width: 190mm) {
-  body {
-    font-size: 14px;
-    line-height: 1.5rem;
-  }
-  body h1 {
-    font-size: 1.5rem;
-  }
-}
+/*@media (max-width: 190mm) {*/
+/*  body {*/
+/*    font-size: 14px;*/
+/*    line-height: 1.5rem;*/
+/*  }*/
+/*  body h1 {*/
+/*    font-size: 1.5rem;*/
+/*  }*/
+/*}*/
 
 h1{
   font-size: 2rem;
@@ -85,19 +88,22 @@ a:hover {
   border-bottom: none;
 }
 
-.header, .header-space,
-.footer, .footer-space {
-    height:5cm;
+header {
     position: fixed;
-
-}.header {
-  position: fixed;
-  top: 0;
-}.footer {
-  position: fixed;
-  bottom: 0;
+    width: 100%;
+    height:2cm;
+    top: 0;
+    left: 0;
+    right: 0;
 }
-
+footer {
+    position: fixed;
+    width: 100%;
+    height:2cm;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
 /*img {*/
   /*max-width: 50%;*/
   /*height: auto;*/
@@ -120,6 +126,22 @@ a:hover {
   Site container
 */
 
+/*.header_title{*/
+/*  font-family: "Quattrocento Sans", sans-serif;*/
+/*  text-decoration: none;*/
+/*  color: #505050;*/
+/*}*/
+
+/*.header_img{*/
+/*    display: inline-block;*/
+/*    max-height: 5%;*/
+/*    max-width: 5%;*/
+/*}*/
+section{
+    height: 10cm;
+    /*top: 10cm;*/
+}
+
 .container {
   /*margin-left: 10mm;*/
   /*margin-right: 10mm;*/
@@ -128,30 +150,8 @@ a:hover {
   width: 210mm;
     text-align: justify;
     text-justify:inter-word;
-}
 
-/*48em*/
-
-/*@media (max-width: 210mm) {*/
-  /*.container {*/
-    /*width: 210mm;*/
-      /*height: 297mm;*/
-  /*}*/
-/*}*/
-
-/*
-  Masthead
-*/
-
-/*.masthead {*/
-  /*!*margin-bottom: 0.5cm;*!*/
-
-    /*align-items: center;*/
-
-/*}*/
-
-.masthead a:hover {
-  color:black;
+    /*page-break-before: always;*/
 }
 
 .masthead-title a {
@@ -159,7 +159,6 @@ a:hover {
   font-family: "Quattrocento Sans", sans-serif;
   text-decoration: none;
   color: #505050;
-
 }
 
 .masthead-subtitle {
@@ -184,219 +183,6 @@ a:hover {
 /*
   Post
 */
-
-.post-container {
-  margin-bottom: 4rem;
-}
-
-.posts {
-  margin-bottom: 1cm;
-  padding: 0px;
-  list-style: none;
-    text-align: justify;
-    text-justify: inter-word;
-}
-
-.post-date {
-  display: block;
-  margin-top:3px;
-  margin-bottom: 1rem;
-  color: #9a9a9a;
-  font-family: 'Quattrocento Sans', sans-serif;
-  font-size:0.8rem;
-}
-
-@media (max-width: 30rem) {
-  .posts h1 {
-    font-size: 1.5rem;
-  }
-}
-
-.related {
-  padding-bottom: 2rem;
-}
-
-.related-posts {
-  padding-left: 0px;
-  list-style: none;
-}
-
-.related-posts a {
-  text-decoration: none;
-}
-
-/*
-  Pagination
-*/
-
-.pagination {
-  overflow: hidden;
-  font-family: 'Quattrocento Sans', sans-serif;
-  text-align: center;
-}
-
-.pagination a {
-  text-decoration: none;
-}
-
-.pagination-button {
-  color: #999;
-  border: 1px solid #e0e0e0;
-  padding: 15px 45px;
-  display: inline-block;
-  font-size: 16px;
-  font-weight: bold;
-}
-
-.pagination-active {
-  color: black;
-}
-
-.pagination-active:hover {
-  background-color: #e0e0e0;
-}
-
-/*
-  Footer
-*/
-
-.footer {
-  color: #999;
-  text-align: center;
-  margin: 2rem;
-}
-
-.footer a {
-  color: #999;
-  padding: 10px;
-  text-decoration: none;
-}
-
-.footer a:hover {
-  color: #333;
-}
-
-/*
-  Menu
-*/
-
-.menu {
-  padding-top: 0.5rem;
-  display: block;
-}
-
-.menu-content {
-  float: left;
-}
-
-.menu-content a {
-  color: #999;
-  font-size: 1rem;
-  padding-right: 10px;
-}
-
-.social-icons {
-  float: right;
-}
-
-.social-icons a {
-  color: #999;
-  font-size: 1rem;
-}
-
-@media (max-width: 30em) {
-  .social-icons {
-    float: left;
-    padding-top: 0px;
-  }
-  .menu-content {
-    margin-bottom: 5px;
-  }
-}
-
-/*
-  Code
-*/
-
-code,
-pre {
-  font-family: "Source Code Pro", monospace;
-}
-code {
-  padding: .25em .5em;
-  font-size: .8rem;
-  background-color: #f5f5f5;
-  border-radius: 3px;
-}
-pre {
-  display: block;
-  margin-top: 0;
-  margin-bottom: 1rem;
-  padding: 1rem;
-  font-size: .8rem;
-  line-height: 1.4;
-  white-space: pre;
-  white-space: pre-wrap;
-  word-break: break-all;
-  word-wrap: break-word;
-  background-color: #f5f5f5;
-}
-pre code {
-  padding: 0;
-  font-size: 100%;
-  color: inherit;
-  background-color: transparent;
-}
-
-/* Pygments via Jekyll */
-.highlight {
-  margin-bottom: 1rem;
-  border-radius: 4px;
-}
-.highlight pre {
-  margin-bottom: 0;
-}
-
-/* Gist via GitHub Pages */
-.gist .gist-file {
-  font-family: "Source Code Pro", monospace !important;
-}
-.gist .markdown-body {
-  padding: 15px;
-}
-.gist pre {
-  padding: 0;
-  background-color: transparent;
-}
-.gist .gist-file .gist-data {
-  font-size: .8rem !important;
-  line-height: 1.4;
-}
-.gist code {
-  padding: 0;
-  color: inherit;
-  background-color: transparent;
-  border-radius: 0;
-}
-
-/*
-  Tables
-*/
-
-table {
-  border-collapse: collapse;
-  margin-bottom: 30px;
-  width: 100%;
-}
-
-table, th, td {
-  border: 1px solid black;
-}
-
-th, td {
-  padding: 15px;
-  text-align: left;
-}
 
 /*
   Social media icons
