--- a/PDF_generator/CSS/main.css
+++ b/PDF_generator/CSS/main.css
@@ -104,6 +104,13 @@ footer {
     left: 0;
     right: 0;
 }
+
+figure{
+	  display: block;
+	  margin-left: auto;
+	  margin-right: auto;
+	  text-align: center;
+}
 /*img {*/
   /*max-width: 50%;*/
   /*height: auto;*/
