--- a/PDF_generator/CSS/main.css
+++ b/PDF_generator/CSS/main.css
@@ -111,6 +111,18 @@ figure{
 	  margin-right: auto;
 	  text-align: center;
 }
+
+table{
+	border-collapse:collapse;
+	width: 100%;
+}
+
+th, td{
+	padding: 8px;
+	text-align: left;
+	border-bottom: 1px solid #ddd;
+}
+
 /*img {*/
   /*max-width: 50%;*/
   /*height: auto;*/
